fix: stream method 에서 toList 함수 수정